--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			</section>
 			<div class="stickyheader"><h2>Adolf Loos</h2></div>
 			<section>
-				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p>
+				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p> </section>
+			<section>
 				<p>In this regard “Ornament and Crime” (1908) is his fiercest polemic, for there he associates the Art Nouveau designer with a child smearing walls and a “Papuan” tattooing skin. For Loos the ornate design of Art Nouveau is erotic and degenerate, a reversal of the proper path of civilization to sublimate, to distinguish, and to purify: thus his notorious formula -</p> <p class="bigtext">“the evolution of culture is synonymous with the removal of ornament from utilitarian objects” — and his infamous association of “ornament and crime.”</p> </section>
 				<section>
 				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p> 
@@ -33,11 +34,14 @@
 			<div class="stickyheader"><h2><em>Poor Little Rich Man</em></h2></div>
 			<section>
 				<p>Loos began his battle with Art Nouveau a decade before “Ornament and Crime.” A pointed attack comes in 1900, in the form of an allegorical skit about “a poor little rich man” who commissions an Art Nouveau designer to put “Art in each and every thing”:</p>
-				<p>Each room formed a symphony of colors, complete in itself. Walls, wall coverings, furniture, and materials were made to harmonize in the most artful ways. Each household item had its own specific place and was integrated with the others in the most wonderful combinations. The architect has forgotten nothing, absolutely nothing. Cigar ashtrays, cutlery, light switches — everything, everything was made by him.</p>
+				<p class="decoratedparagraph">Each room formed a symphony of colors, complete in itself. Walls, wall coverings, furniture, and materials were made to harmonize in the most artful ways. Each household item had its own specific place and was integrated with the others in the most wonderful combinations. The architect has forgotten nothing, absolutely nothing. Cigar ashtrays, cutlery, light switches — everything, everything was made by him.</p> </section>
+				<section>
 				<p>This <em>Gesamtkunstwerk</em> does more than combine architecture, art, and craft; it commingles subject and object:</p>
-				<p class="bigtext"> “the individuality of the owner was expressed in every ornament, every form, every nail.”</p> 
-				<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: “The happy man suddenly felt deeply, deeply unhappy ...”</p>
-				<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to go about life with one’s own corpse. Yes indeed. He is finished. He is complete!” For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p>
+				<p class="bigtext"> “the individuality of the owner was expressed in every ornament, every form, every nail.”</p> </section>
+				<section>
+					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: “The happy man suddenly felt deeply, deeply unhappy ...”</p> </section>
+				<section>
+				<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to go about life with one’s own corpse. Yes indeed. He is finished. He is complete!” For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
 			</section>
 			<div class="stickyheader"><h2>Living <em>"with one's own corpse."</em></h2></div>
 			<section>
@@ -45,21 +49,33 @@
 			</section>
 			<div class="stickyheader"><h2>Chamber Pot</h2></div>
 			<section>
-				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> 
-				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture. </p>
-				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p>
+				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> </section>
+			<section>
+				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture. </p> </section>
+			<section>
+				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p> </section>
 			</section>
 	<!-- Below is my take on the reading -->
 	<div class="stickyheader"><h2>My reading response</h2></div>
 	<section>
 				<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
-				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality. However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p>
+			</section>
+			<section>
+				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality. However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p> </section>
+			<section>
 				<p>From the reading, I learned to be critical as a designer when creating work. Hal Foster inspired me to raise questions about modern-day design trends. For example, as an interface designer, I often use top industry brands like Apple to get my design inspiration. By following trends, am I mindlessly spreading specific brand messages through my works? Am I doing anything impactful for society or just adding to consumerism? Am I just creating aesthetically pleasing work, or is there an innovation behind it?</p>
-				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p>
+			</section>
+			<section>
+				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p></section>
+			<section>
 				<p>In conclusion, as a designer, I strongly agree with Hal Foster's message to challenge ourselves and create works for a better future rather than add to decorations. </p>
 			</section>
-				<footer id="myname">By Bulgan (Bee) Altangerel</footer>
-				<footer>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</footer>
-				<footer>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</footer>
+			<section class="wrapup">
+				<h2>By Bulgan (Bee) Altangerel</h2>
+				<h2>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</h2>
+				<h2>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h2>
+			</section>
+		</article>
+				<footer><h2>Website by Bee Bulgan @2024</h2></footer>
 	</body>
 </html>
