Edited the bigtext css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	 <article>
 		<div class="stickyheader"><h2>Introduction</h2></div>
 			<section class="standoutsection">
-				<p>The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — </p><p class="bigtext">— as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow.</p>
+				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — </p><p class="bigtext">— as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow.</p>
 			</section>
 			<section>
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.
@@ -68,10 +68,11 @@
 			<section>
 				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p></section>
 			<section>
-				<p>In conclusion, as a designer, I strongly agree with Hal Foster's message to challenge ourselves and create works for a better future rather than add to decorations. </p>
+				<p>In conclusion, as a designer, I strongly agree with Hal Foster's message to challenge ourselves and create works for a better future rather than add to decorations.</p></section>
+			<section>
+				<p>By Bulgan (Bee) Altangerel</p>
 			</section>
 			<section class="wrapup">
-				<h2>By Bulgan (Bee) Altangerel</h2>
 				<h2>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</h2>
 				<h2>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h2>
 			</section>
