--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<div id="title"><h1>DESIGN<br><span id="and">&</span><span id="crime"> CRIME</span></h1></div>
 			<div id="author"><h2>And Other Diatribes<br><span id="author">Chapter Two<br>Hal Foster, 2002</span></h2></div>
 		</header> 
+		<div id="arrowup"><h1>&#8593;</h1></div>
 	<!-- Below is the reading from Crime and Design -->
 	 <article>
 		<div class="stickyheader"><h2>Introduction</h2></div>
