Added an animated circle text

--- a/index.html
+++ b/index.html
@@ -10,8 +10,57 @@
 	</head>
 	<body>
 		<header>
-			<div id="title"><h1>DESIGN<br><span id="and">&</span><span id="crime"> CRIME</span></h1></div>
-			<div id="author"><h2>And Other Diatribes<br><span id="author">Chapter Two<br>Hal Foster, 2002</span></h2></div>
+			<!-- <div id="headcontainer"> -->
+				<!-- <div id="circletext"> -->
+				<!-- <svg x="0px" y="0px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve"> -->
+					<!-- <defs> -->
+						<!-- <path id="circlePath" d="M 150, 150 m -100, 0 a 100,100 0 0,1 200,0 a 100,100 0 0,1 -200,0 "/> -->
+
+					<!-- </defs> -->
+					<!-- <circle cx="150" cy="150" r="100" fill="none"/> -->
+					<!-- <g> -->
+						<!-- <use xlink:href="#circlePath" fill="none"/> -->
+						<!-- <text fill="#000"> -->
+							<!-- <textPath xlink:href="#circlePath"> & Design & Crime & Design & Crime & </textPath> -->
+						<!-- </text> -->
+					<!-- </g> -->
+				<!-- </svg> -->
+				<!-- </div> -->
+				<!-- </div> -->
+				<div id="headcontainer">
+					<div id="circletext">
+						<!-- Outer Circle -->
+						<svg x="0px" y="0px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+							<defs>
+								<path id="circlePathOuter" d="M 150, 150 m -120, 0 a 120,120 0 0,1 240,0 a 120,120 0 0,1 -240,0 "/>
+							</defs>
+							<circle cx="150" cy="150" r="120" fill="none"/>
+							<g>
+								<use xlink:href="#circlePathOuter" fill="none"/>
+								<text fill="#000">
+									<textPath xlink:href="#circlePathOuter"> Design & Crime & Design & Crime & Design & Crime & </textPath>
+								</text>
+							</g>
+						</svg>
+				
+						<!-- Inner Circle -->
+						<svg x="0px" y="0px" viewBox="0 0 300 300" enable-background="new 0 0 300 300" xml:space="preserve">
+							<defs>
+								<path id="circlePathInner" d="M 150, 150 m -80, 0 a 80,80 0 0,1 160,0 a 80,80 0 0,1 -160,0 "/>
+							</defs>
+							<circle cx="150" cy="150" r="80" fill="none"/>
+							<g>
+								<use xlink:href="#circlePathInner" fill="none"/>
+								<text fill="#000">
+									<textPath xlink:href="#circlePathInner"> And Other Diatribes And Other Diatribes And Other Diatribes</textPath>
+								</text>
+							</g>
+						</svg>
+					</div>
+				</div>
+				
+			<!-- <div id="title"><h1>DESIGN<br><span id="and">&</span><span id="crime"> CRIME</span></h1></div> -->
+			<!-- <div id="author"><h2>And Other Diatribes<br><span id="author">Chapter Two<br>Hal Foster, 2002</span></h2></div> -->
 		</header> 
 		<div id="arrowup"><h1>&#8593;</h1></div>
 	<!-- Below is the reading from Crime and Design -->
