--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 					</div>
 				</div>
 		</header> 
+		<div class="author">
+			<h1>Hal Foster&nbsp;&nbsp; Ch.2&nbsp;&nbsp; 2002</h1>
+		</div>
 		<div id="arrowup"><h1>&#8593;</h1></div>
 	<!-- Below is the reading from Crime and Design -->
 	 <article>
