--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		</style>
 	</head>
 	<body>
+		<div class="progress"></div>
 		<header>
 				<div id="headcontainer">
 					<div id="circletext">
