--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	</head>
 	<body>
 		<div class="progress"></div>
+		<div class="headerdiv">
 		<header>
 				<div id="headcontainer">
 					<div id="circletext">
@@ -46,8 +47,9 @@
 					</div>
 				</div>
 		</header> 
+	</div>
 		<div class="author">
-			<h1>Hal Foster&nbsp;&nbsp; Ch.2&nbsp;&nbsp; 2002</h1>
+			<h1>Hal Foster&nbsp;&nbsp;|&nbsp; Ch.2&nbsp;&nbsp; | &nbsp;2002</h1>
 		</div>
 		<div id="arrowup"><h1>&#8593;</h1></div>
 	<!-- Below is the reading from Crime and Design -->
