added css changes to borders

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 				</div>
 		</header> 
 	</div>
+
 		<div class="author">
 			<h1>Hal Foster&nbsp;&nbsp;|&nbsp; Ch.2&nbsp;&nbsp; | &nbsp;2002</h1>
 		</div>
@@ -55,13 +56,16 @@
 	<!-- Below is the reading from Crime and Design -->
 	 <article>
 		<div class="stickyheader"><h2>Introduction</h2></div>
+		<div class="sectionmain">
 			<section class="standoutsection">
-				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line — </p><p class="bigtext">— as if to inhabit the thing in this crafted way was to resist the advance of industrial reification somehow.</p>
-			</section>
+				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line</p></section>
+				<section><p class="bigtext">— as if to inhabit the thing in this crafted way was <mark>to resist the advance of industrial reification somehow.</mark></p></section>
+
 			<section>
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.
 				</p>  
-			</section>
+			</div>
+		</section>
 			<div class="stickyheader"><h2>Adolf Loos</h2></div>
 			<section>
 				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p> </section>
