Added color to flower symbol for h2

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 		<div id="arrowup"><h1>&#8593;</h1></div>
 	<!-- Below is the reading from Crime and Design -->
 	 <article>
-		<div class="stickyheader"><h2>Introduction</h2></div>
+		<div class="stickyheader"><h2><span id="flower">&#10059;</span> Introduction</h2></div>
 		<div class="sectionmain">
 			<section class="standoutsection">
+			
 				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line</p></section>
 				<section><p class="bigtext">— as if to inhabit the thing in this crafted way was <mark>to resist the advance of industrial reification somehow.</mark></p></section>
 
@@ -66,7 +67,7 @@
 				</p>  
 			</div>
 		</section>
-			<div class="stickyheader"><h2>Adolf Loos</h2></div>
+			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Adolf Loos</h2></div>
 			<section>
 				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p> </section>
 			<section>
@@ -74,7 +75,7 @@
 				<section>
 				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p> 
 			</section>
-			<div class="stickyheader"><h2><em>Poor Little Rich Man</em></h2></div>
+			<div class="stickyheader"><h2><em><span id="flower">&#10059;</span> Poor Little Rich Man</em></h2></div>
 			<section>
 				<p>Loos began his battle with Art Nouveau a decade before “Ornament and Crime.” A pointed attack comes in 1900, in the form of an allegorical skit about “a poor little rich man” who commissions an Art Nouveau designer to put “Art in each and every thing”:</p>
 				<p class="decoratedparagraph">Each room formed a symphony of colors, complete in itself. Walls, wall coverings, furniture, and materials were made to harmonize in the most artful ways. Each household item had its own specific place and was integrated with the others in the most wonderful combinations. The architect has forgotten nothing, absolutely nothing. Cigar ashtrays, cutlery, light switches — everything, everything was made by him.</p> </section>
@@ -86,11 +87,11 @@
 				<section>
 				<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to go about life with one’s own corpse. Yes indeed. He is finished. He is complete!” For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
 			</section>
-			<div class="stickyheader"><h2>Living <em>"with one's own corpse."</em></h2></div>
+			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Living <em>"with one's own corpse."</em></h2></div>
 			<section>
 				<p>For Loos, on the other hand, this triumphant overcoming of limits is a catastrophic loss of the same — loss of the objective constraints required to define any “future living and striving, developing and desiring.” Far from a transcendence of death, this loss of finitude is a death-in-life, as figured in the ultimate trope of indistinction, living “with one’s own corpse.”  Such is the malaise of “the poor little rich man”: rather than a man of qualities, he is a man without them (as another Viennese scourge, the great novelist Robert Musil, would soon put it), for what he lacks, in his very completion, is difference or distinction. In a typically pithy statement of 1912 Kraus would call this lack of distinction, which precludes “all future living and striving,” a lack of “running-room”.</p>
 			</section>
-			<div class="stickyheader"><h2>Chamber Pot</h2></div>
+			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Chamber Pot</h2></div>
 			<section>
 				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> </section>
 			<section>
