Added symbol to the header and changed colors

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<g>
 								<use xlink:href="#circlePathOuter" fill="none"/>
 								<text fill="#000">
-									<textPath xlink:href="#circlePathOuter">Design & Crime & Design & Crime & Design & Crime &</textPath>
+									<textPath xlink:href="#circlePathOuter">Crime & Design &#10059; Crime & Design &#10059; Crime & Design &#10059;</textPath>
 								</text>
 							</g>
 						</svg>
@@ -40,7 +40,7 @@
 							<g>
 								<use xlink:href="#circlePathInner" fill="none"/>
 								<text fill="#000">
-									<textPath xlink:href="#circlePathInner"> And Other Diatribes And Other Diatribes And Other Diatribes</textPath>
+									<textPath xlink:href="#circlePathInner">&#10059; & Other Diatribes &#10059; & Other Diatribes &#10059; & Other Diatribes</textPath>
 								</text>
 							</g>
 						</svg>
