--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			</div>
 		</section>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Adolf Loos</h2></div>
+			<div class="sectionmain">
 			<section>
 				<p>Adolf Loos, the Viennese architect of austere façades, was the great critic of the aesthetic hybridity of Art Nouveau, In his milieu he was to architecture what Schönberg was to music, Wittgenstein to philosophy, or Karl Kraus to journalism — a scourge of the impure and the superfluous in his own discipline.</p> </section>
 			<section>
@@ -75,7 +76,9 @@
 				<section>
 				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p> 
 			</section>
+		</div>
 			<div class="stickyheader"><h2><em><span id="flower">&#10059;</span> Poor Little Rich Man</em></h2></div>
+			<div class="sectionmain">
 			<section>
 				<p>Loos began his battle with Art Nouveau a decade before “Ornament and Crime.” A pointed attack comes in 1900, in the form of an allegorical skit about “a poor little rich man” who commissions an Art Nouveau designer to put “Art in each and every thing”:</p>
 				<p class="decoratedparagraph">Each room formed a symphony of colors, complete in itself. Walls, wall coverings, furniture, and materials were made to harmonize in the most artful ways. Each household item had its own specific place and was integrated with the others in the most wonderful combinations. The architect has forgotten nothing, absolutely nothing. Cigar ashtrays, cutlery, light switches — everything, everything was made by him.</p> </section>
@@ -86,12 +89,15 @@
 					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: “The happy man suddenly felt deeply, deeply unhappy ...”</p> </section>
 				<section>
 				<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to go about life with one’s own corpse. Yes indeed. He is finished. He is complete!” For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
-			</section>
+			</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Living <em>"with one's own corpse."</em></h2></div>
+			<div class="sectionmain">
 			<section>
 				<p>For Loos, on the other hand, this triumphant overcoming of limits is a catastrophic loss of the same — loss of the objective constraints required to define any “future living and striving, developing and desiring.” Far from a transcendence of death, this loss of finitude is a death-in-life, as figured in the ultimate trope of indistinction, living “with one’s own corpse.”  Such is the malaise of “the poor little rich man”: rather than a man of qualities, he is a man without them (as another Viennese scourge, the great novelist Robert Musil, would soon put it), for what he lacks, in his very completion, is difference or distinction. In a typically pithy statement of 1912 Kraus would call this lack of distinction, which precludes “all future living and striving,” a lack of “running-room”.</p>
 			</section>
+		</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Chamber Pot</h2></div>
+			<div class="sectionmain">
 			<section>
 				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> </section>
 			<section>
@@ -99,8 +105,10 @@
 			<section>
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p> </section>
 			</section>
+		</div>
 	<!-- Below is my take on the reading -->
 	<div class="stickyheader"><h2>My reading response</h2></div>
+	<div class="sectionmain2">
 	<section>
 				<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
 			</section>
@@ -120,6 +128,7 @@
 				<h2>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</h2>
 				<h2>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h2>
 			</section>
+		</div>
 		</article>
 				<footer><h2>Website by Bee Bulgan @2024</h2></footer>
 	</body>
