added flower symbol to my response section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</section>
 		</div>
 	<!-- Below is my take on the reading -->
-	<div class="stickyheader"><h2>My reading response</h2></div>
+	<div class="stickyheader"><h2><span id="flower2">&#10059;</span> My reading response</h2></div>
 	<div class="sectionmain2">
 	<section>
 				<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
