Added bigtext2 class

--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
 	 <article>
 		<div class="stickyheader"><h2><span id="flower">&#10059;</span> Introduction</h2></div>
 		<div class="sectionmain">
-			<section class="standoutsection">
-			
-				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line</p></section>
-				<section><p class="bigtext">— as if to inhabit the thing in this crafted way was <mark>to resist the advance of industrial reification somehow.</mark></p></section>
-
+			<div class="paragraphs-grid">
+				<p class="intro">The turn of one century calls up others, and 2000 was no exception. Over the last few years <em>Style 1900</em> or Art Nouveau has returned with a vengeance in museum shows and academic books. It all seems long ago and far away, this pan-European movement pledged to a <em>Gesamtkunstwerk</em> or “total work” of arts and crafts, in which everything from architecture to ashtrays was subject to a florid kind of decoration, in which the designer struggled to impress his subjectivity on all sorts of objects through an idiom of vitalist line</p></div>
+				<div class="bigtext-grid">
+				<section><p class="bigtext">— as if to inhabit the thing in this crafted way was <mark>to resist the advance of industrial reification somehow.</mark></p></section></div>
 			<section>
 				<p>As the aesthetics of the machine became dominant in the 1920s, Art Nouveau was no longer <em>nouveau</em>, and in the next decades it slowly passed from an outmoded style to a campy one, and it has lingered in this limbo ever since. Yet what struck me, in the midst of this recent parade of Art Nouveau manifestations, was its strong echo in the present — intuition that we live in another era of blurred disciplines, of objects treated as mini-subjects, of total design, of a <em>Style 2000</em>.
 				</p>  
@@ -86,7 +85,7 @@
 				<p>This <em>Gesamtkunstwerk</em> does more than combine architecture, art, and craft; it commingles subject and object:</p>
 				<p class="bigtext"> “the individuality of the owner was expressed in every ornament, every form, every nail.”</p> </section>
 				<section>
-					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: “The happy man suddenly felt deeply, deeply unhappy ...”</p> </section>
+					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: </p> <p class="bigtext2">“The happy man suddenly felt deeply, deeply unhappy ...”</p> </section>
 				<section>
 				<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to go about life with one’s own corpse. Yes indeed. He is finished. He is complete!” For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
 			</div>
