bigtext2 and decoratedparagraph class changes

--- a/index.html
+++ b/index.html
@@ -86,21 +86,24 @@
 				<p class="bigtext"> “the individuality of the owner was expressed in every ornament, every form, every nail.”</p> </section>
 				<section>
 					<p>For the Art Nouveau designer this is perfection: “You are complete!” he exults to the owner. But the owner is not so sure: this completion “taxed [his] brain.” Rather than a sanctuary from modern stress, his Art Nouveau interior is another expression of it: </p> <p class="bigtext2">“The happy man suddenly felt deeply, deeply unhappy ...”</p> </section>
-				<section>
-				<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to go about life with one’s own corpse. Yes indeed. He is finished. He is complete!” For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
+
 			</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Living <em>"with one's own corpse."</em></h2></div>
 			<div class="sectionmain">
+				<section>
+					<p>He was precluded from all future living and striving, developing and desiring. He thought, this is what it means to learn to <mark>go about life with one’s own corpse. Yes indeed. He is finished. He is complete!”</mark> For the Art Nouveau designer this completion reunites art and life, and all signs of death are banished.</p> </section>
 			<section>
-				<p>For Loos, on the other hand, this triumphant overcoming of limits is a catastrophic loss of the same — loss of the objective constraints required to define any “future living and striving, developing and desiring.” Far from a transcendence of death, this loss of finitude is a death-in-life, as figured in the ultimate trope of indistinction, living “with one’s own corpse.”  Such is the malaise of “the poor little rich man”: rather than a man of qualities, he is a man without them (as another Viennese scourge, the great novelist Robert Musil, would soon put it), for what he lacks, in his very completion, is difference or distinction. In a typically pithy statement of 1912 Kraus would call this lack of distinction, which precludes “all future living and striving,” a lack of “running-room”.</p>
+				<p>For Loos, on the other hand, this triumphant overcoming of limits is a catastrophic loss of the same </p> <p class="bigtext">— loss of the objective constraints required to define any “future living and striving, developing and desiring.”</p> 
+			<section>
+				<p> Far from a transcendence of death, this loss of finitude is a death-in-life, as figured in the ultimate trope of indistinction, living “with one’s own corpse.”  Such is the malaise of “the poor little rich man”: rather than a man of qualities, he is a man without them (as another Viennese scourge, the great novelist Robert Musil, would soon put it), for what he lacks, in his very completion, is difference or distinction. In a typically pithy statement of 1912 Kraus would call this lack of distinction, which precludes “all future living and striving,” a lack of “running-room”.</p>
 			</section>
 		</div>
 			<div class="stickyheader"><h2><span id="flower">&#10059;</span> Chamber Pot</h2></div>
 			<div class="sectionmain">
 			<section>
-				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. The others, the positive ones [i.e., those who fail to make this distinction], are divided into those who use the urn as a chamber pot and those who use the chamber pot as an urn.</p> </section>
+				<p>Adolf Loos and I — he literally and I linguistically — have done nothing more than show that there is a distinction between an urn and a chamber pot and that it is this distinction above all that provides culture with running-room [<em>Spielraum</em>]. </p> <p class="bigtext2">The others, the positive ones [i.e., those who fail to make this distinction], are divided into <mark>those who use the urn as a chamber pot and those who use the chamber pot as an urn.</mark></p> </section>
 			<section>
-				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things: they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture. </p> </section>
+				<p>Here “those who use the urn as a chamber pot” are Art Nouveau designers who want to infuse art (the urn) into the utilitarian object (the chamber pot). Those who do the reverse are functionalist modernists who want to elevate the utilitarian object into art. (A few years later Marcel Duchamp would trump both sides with his dysfunctional urinal, <em>Fountain</em>, presented as art, but that’s another story.) For Kraus the two mistakes are symmetrical — both confuse use-value and art-value — and both are perverse in as much as both risk a regressive indistinction of things:</p> <p class="decoratedparagraph"> they fail to see that objective limits are necessary for “the running-room” that allows for the making of a liberal kind of subjectivity and culture.</p> </section>
 			<section>
 				<p>This is why Loos opposes not only the total design of Art Nouveau but also its wanton subjectivism (“individuality expressed in every nail”). Neither Loos nor Kraus says anything about a natural “essence” of art, or an absolute “autonomy” of culture; the stake is one of “distinctions” and “running-room,” of proposed differences and provisional spaces.</p> </section>
 			</section>
@@ -112,9 +115,9 @@
 				<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
 			</section>
 			<section>
-				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality. However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p> </section>
+				<p>The author challenges the reader to critically examine Art Nouveau's approach to design and understand why it is problematic. The reading changed my views about the art movement; before, I enjoyed Art Nouveau-style objects and decorations without thinking much about their functionality.</p> <p class="bigtext2">However, I am now questioning how much is enough when using design as decorations and whether purely aesthetic designs can ever improve our society.</p> </section>
 			<section>
-				<p>From the reading, I learned to be critical as a designer when creating work. Hal Foster inspired me to raise questions about modern-day design trends. For example, as an interface designer, I often use top industry brands like Apple to get my design inspiration. By following trends, am I mindlessly spreading specific brand messages through my works? Am I doing anything impactful for society or just adding to consumerism? Am I just creating aesthetically pleasing work, or is there an innovation behind it?</p>
+				<p>From the reading, I learned to be critical as a designer when creating work. Hal Foster inspired me to raise questions about modern-day design trends. For example, as an interface designer, I often use top industry brands like Apple to get my design inspiration. <mark>By following trends, am I mindlessly spreading specific brand messages through my works?</mark> Am I doing anything impactful for society or just adding to consumerism? Am I just creating aesthetically pleasing work, or is there an innovation behind it?</p>
 			</section>
 			<section>
 				<p>I firmly believe that Art Nouveau's concept of <em>Gesamtkunstwerk</em>, or "complete work," is a bad idea for contemporary design practices, especially in interaction design. Creating easy-to-navigate digital products that humans can naturally understand is challenging. When working with data, organizing them in a way that does not overwhelm the user has always been vital. Simplicity is not a "cool" trend in digital design; it is a requirement to make users understand what they see on a screen. Putting functionality and simplicity aside and using decorative elements, like a frame, in an interface would distract the users from the product's primary functions and overwhelm them.</p></section>
@@ -124,8 +127,8 @@
 				<p>By Bulgan (Bee) Altangerel</p>
 			</section>
 			<section class="wrapup">
-				<h2>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</h2>
-				<h2>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h2>
+				<h3>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</h3>
+				<h3>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h3>
 			</section>
 		</div>
 		</article>
