--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="progress"></div>
-		<div class="headerdiv">
+		<div class="headerdiv" id="header">
 		<header>
 				<div id="headcontainer">
 					<div id="circletext">
@@ -52,7 +52,7 @@
 		<div class="author">
 			<h1>Hal Foster&nbsp;&nbsp;|&nbsp; Ch.2&nbsp;&nbsp; | &nbsp;2002</h1>
 		</div>
-		<div id="arrowup"><h1>&#8593;</h1></div>
+		<div id="arrowup"><a href="#header"><h1>&#8593;</h1></a></div>
 	<!-- Below is the reading from Crime and Design -->
 	 <article>
 		<div class="stickyheader"><h2><span id="flower">&#10059;</span> Introduction</h2></div>
@@ -127,7 +127,7 @@
 				<p>By Bulgan (Bee) Altangerel</p>
 			</section>
 			<section class="wrapup">
-				<h3>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em>Design and Crime And Other Diatribes</em></a>.</h3>
+				<h3>Thank you for reading. Here is the link to <a href="https://readings.design/PDF/design-and-crime.pdf"><em span id="linktoreading">Design and Crime And Other Diatribes.</em></a></h3>
 				<h3>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h3>
 			</section>
 		</div>
