added animation to the flower symboll

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<p>This anti-decorative dictate is a modernist mantra if ever there was one, and it is for the puritanical propriety inscribed in such words that postmodernists have condemned modernists like Loos in turn. But maybe times have changed again; maybe we are in a moment when distinctions between practices might be reclaimed or remade - without the ideological baggage of purity and propriety attached.</p> 
 			</section>
 		</div>
-			<div class="stickyheader"><h2><em><span id="flower">&#10059;</span> Poor Little Rich Man</em></h2></div>
+			<div class="stickyheader"><h2><span id="flower">&#10059;</span> <em>Poor Little Rich Man</em></h2></div>
 			<div class="sectionmain">
 			<section>
 				<p>Loos began his battle with Art Nouveau a decade before “Ornament and Crime.” A pointed attack comes in 1900, in the form of an allegorical skit about “a poor little rich man” who commissions an Art Nouveau designer to put “Art in each and every thing”:</p>
