changed max-height for header in desktop

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
 				<h3>Citation: Foster, Hal. 2000. <em>Design And Crime And Other Diatribes</em>. Verso Books.</h3>
 			</section>
 		</div>
+		<div class="stickyheader"><h2><span id="flower2">&#10059;</span> Colophon</h2></div>
+	<div class="sectionmain2">
+		<section>
+			<p>The book <em>Design and Crime and Other Diatribes</em> raises the concern that design in the 2000s has become a slave to consumerism and is straying away from its power to be critical and innovative. In chapter two, Hal Foster uses Art Nouveau’s decorative madness to draw similarity with modern consumerists' desire to use design to “complete” their lives.</p>
+		</section>
+	</div>
 		</article>
 				<footer><h2>Website by Bee Bulgan @2024</h2></footer>
 	</body>
