link to top edit

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="author">
 			<h1>Hal Foster&nbsp;&nbsp;|&nbsp; Ch.2&nbsp;&nbsp; | &nbsp;2002</h1>
 		</div>
-		<div id="arrowup"><a href="#header"><h1>&#8593;</h1></a></div>
+		<a href="#header"><div id="arrowup"><h1>&#8593;</h1></div></a>
 	<!-- Below is the reading from Crime and Design -->
 	 <article>
 		<div class="stickyheader"><h2><span id="flower">&#10059;</span> Introduction</h2></div>
